<resources>
    <string name="app_name">Santun</string>
    <string name="detail_button">Details</string>
    <string name="sender_label">FROM</string>
    <string name="sender_hint">Insert sender name…</string>
    <string name="receiver_label">TO</string>
    <string name="receiver_hint">Insert receiver name…</string>
    <string name="message_label">MESSAGE</string>
    <string name="message_hint">Write your message here…</string>
    <string name="image_label">IMAGE</string>
    <string name="image_button">Pick from gallery</string>
    <string name="camera_button">Take a photo</string>
    <string name="compose_button">Compose</string>
    <string name="empty_message">Please fill all the fields.</string>
    <string name="sender_label_card">From:</string>
    <string name="receiver_label_card">To:</string>
    <string name="message_label_card">Message:</string>
    <string name="no_connection_message">Internet connection lost. Message list won\'t be updated.</string>
    <string name="no_messages">No messages yet.</string>
    <string name="no_message_selected">Select a message to see the details.</string>
    <string name="message_send_success">Message has been sent successfully!</string>
    <string name="message_send_failed">Failed to send message, retrying later.</string>
    <string name="camera_permission_rationale">To use this feature, you must allow this application to access your camera.</string>
    <string name="backup_menu_title">Backup all messages</string>
    <string name="about_menu_title">About</string>
    <string name="connect_internet_hint">You need an internet connection to use this feature.</string>
    <string name="about_version">Version 2.0.0</string>
    <string name="about_developer">Written by laymonage</string>
    <string name="about_license">Released under the MIT License</string>
    <string name="about_year">2019</string>
    <string name="stylized_name">"s\na\nn\nt\nu\nn"</string>
    <string name="sync_menu_title">Sync</string>
    <string name="sync_notification_channel_name">Synchronization</string>
    <string name="sync_notification_channel_description">Synchronization with server</string>
    <string name="sync_notification_title">Sync completed</string>
    <string name="sync_notification_text">Message list is up to date.</string>
</resources>
